test/classes/initializers/generics/declarations/default_value_bad.good
default_value_bad.chpl:16: error: unresolved call 'Foo.init("blah")'
default_value_bad.chpl:8: note: candidates are: Foo.init(xVal = 3)
deleted module lines
